<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#221E1E"
    android:backgroundTint="@color/dark_principal"
    android:fitsSystemWindows="true"
    android:layout_gravity="center"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="262dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/geoplus_not_background" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_username"
                    android:textColor="@color/dark_text" />

                <EditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dark_secondary"
                    android:backgroundTint="@color/dark_secondary"
                    android:backgroundTintMode="add"
                    android:ems="10"
                    android:foregroundTint="@color/dark_secondary"
                    android:inputType="text"
                    android:padding="8dp"
                    android:text="@string/input_username"
                    android:textColor="@color/semitransparent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_password"
                    android:textColor="@color/dark_text" />

                <EditText
                    android:id="@+id/input_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dark_secondary"
                    android:backgroundTint="@color/dark_secondary"
                    android:backgroundTintMode="add"
                    android:ems="10"
                    android:foregroundTint="@color/dark_secondary"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:text="@string/input_password"
                    android:textColor="@color/semitransparent" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/principal_color"
                android:text="@string/button_login"
                app:cornerRadius="10dp"
                app:strokeColor="@color/secondary_color"
                app:strokeWidth="3dp" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/no_color"
                android:text="@string/button_register"
                android:textColor="@color/principal_color"
                app:cornerRadius="10dp"
                app:strokeColor="@color/secondary_color"
                app:strokeWidth="3dp" />

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/no_color"
                android:text="@string/button_exit"
                android:textColor="@color/principal_color"
                app:cornerRadius="10dp"
                app:strokeColor="@color/secondary_color"
                app:strokeWidth="3dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>