<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_principal"
    android:backgroundTint="@color/dark_principal">

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/resume_title"
            android:textColor="@color/white"
            android:textSize="22sp" />
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/compose_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/principal_color"
            android:text="@string/button_next"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            app:strokeColor="@color/secondary_color"
            app:strokeWidth="3dp" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/no_color"
            android:text="@string/button_back"
            android:textColor="@color/principal_color"
            app:cornerRadius="10dp"
            app:strokeColor="@color/secondary_color"
            app:strokeWidth="3dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>