<?xml version="1.0" encoding="utf-8"?>
<androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_container_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:name="com.example.geoplus.fragments.GameCardFragment" >
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/principal_color"
    android:backgroundTint="@color/principal_color"
    android:padding="15dp"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/principal_color"
        android:orientation="vertical"
        app:flow_verticalGap="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/card_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/star1"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/star_solid" />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/star_solid" />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/star_solid" />

            <ImageView
                android:id="@+id/star4"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/star_half" />

            <ImageView
                android:id="@+id/star5"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/star_regular" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/average"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:text="@string/card_prom"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/completes"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center|clip_vertical"
            android:backgroundTint="@color/principal_color"
            android:text="@string/card_completes"
            android:textSize="20sp"
            app:cornerRadius="0dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.fragment.app.FragmentContainerView>